# DJI_thermal_img_convert

./: .gitignore  Readme.md  main.py  requirements.txt
assets/: DJI_0001_T.tiff
dji_thermal_sdk_v1.3_20220517/: History.txt  License.txt  Readme.md
dji_thermal_sdk_v1.3_20220517/doc/: index.html
dji_thermal_sdk_v1.3_20220517/doc/html/: annotated.html  annotated_dup.js  classes.html  dir_856524284ebe840938865dc061f982fb.html  dir_856524284ebe840938865dc061f982fb.js  dirp__api_8h.html  dirp__api_8h_source.html  dirp__wrapper_8h.html  dirp__wrapper_8h.js  dirp__wrapper_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  navtreedata.js  structdirp__api__version__t.html  structdirp__api__wrapper__t.html  structdirp__api__wrapper__t.js  structdirp__color__bar__t.html  structdirp__enhancement__params__t.html  structdirp__isotherm__t.html  structdirp__isotherm__t.js  structdirp__isp__pseudo__color__lut__t.html  structdirp__isp__pseudo__color__lut__t.js  structdirp__measurement__params__range__t.html  structdirp__measurement__params__t.html  structdirp__measurement__params__t.js  structdirp__resolution__t.html  structdirp__rjpeg__version__t.html
dji_thermal_sdk_v1.3_20220517/doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_9.js  all_e.js  defines_0.js  enums_0.js  functions_0.js  typedefs_0.js  typedefs_1.js  variables_3.js  variables_4.js  variables_a.js
dji_thermal_sdk_v1.3_20220517/doc/latex/: annotated.tex  dir_856524284ebe840938865dc061f982fb.tex  refman.tex  structdirp__color__bar__t.tex
dji_thermal_sdk_v1.3_20220517/doc/rtf/: refman.rtf
dji_thermal_sdk_v1.3_20220517/sample/: CMakeLists.txt  build.bat  build.sh  dji_ircm.cpp  dji_irp.cpp  dji_irp_omp.cpp  libv_cirp_api.cpp
dji_thermal_sdk_v1.3_20220517/tsdk-core/api/: dirp_api.h  dirp_wrapper.h
dji_thermal_sdk_v1.3_20220517/tsdk-core/lib/windows/release_x64/: libdirp.lib  libv_dirp.lib  libv_girp.lib  libv_iirp.lib
dji_thermal_sdk_v1.3_20220517/tsdk-core/lib/windows/release_x86/: libv_dirp.lib  libv_girp.lib
dji_thermal_sdk_v1.4_20220929/: History.txt
dji_thermal_sdk_v1.4_20220929/doc/html/: annotated.html  classes.html  dir_856524284ebe840938865dc061f982fb.html  dirp__api_8h.html  dirp__api_8h.js  dirp__api_8h_source.html  dirp__wrapper_8h.html  dirp__wrapper_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreeindex0.js  structdirp__api__version__t.html  structdirp__api__version__t.js  structdirp__api__wrapper__t.html  structdirp__color__bar__t.html  structdirp__color__bar__t.js  structdirp__enhancement__params__t.html  structdirp__enhancement__params__t.js  structdirp__isotherm__t.html  structdirp__isp__pseudo__color__lut__t.html  structdirp__measurement__params__range__t.html  structdirp__measurement__params__range__t.js  structdirp__measurement__params__t.html  structdirp__resolution__t.html  structdirp__resolution__t.js  structdirp__rjpeg__version__t.html  structdirp__rjpeg__version__t.js
dji_thermal_sdk_v1.4_20220929/doc/html/search/: all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_1.js  enumvalues_0.js  files_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js  variables_c.js
dji_thermal_sdk_v1.4_20220929/doc/latex/: dirp__api_8h.tex  dirp__wrapper_8h.tex  files.tex  refman.tex  structdirp__api__version__t.tex  structdirp__api__wrapper__t.tex  structdirp__enhancement__params__t.tex  structdirp__isotherm__t.tex  structdirp__isp__pseudo__color__lut__t.tex  structdirp__measurement__params__range__t.tex  structdirp__measurement__params__t.tex  structdirp__resolution__t.tex  structdirp__rjpeg__version__t.tex
dji_thermal_sdk_v1.4_20220929/doc/rtf/: dir_856524284ebe840938865dc061f982fb.rtf  refman.rtf
dji_thermal_sdk_v1.4_20220929/sample/: CMakeLists.txt  build.bat  build.sh  dji_ircm.cpp  dji_irp.cpp  dji_irp_omp.cpp  libv_cirp_api.cpp
dji_thermal_sdk_v1.4_20220929/tsdk-core/api/: dirp_api.h  dirp_wrapper.h
